Log4j2 config updates.

--- a/build.gradle
+++ b/build.gradle
@@ -111,6 +111,11 @@ allprojects {
     } else {
         ext.isDevBuild=true
     }
+    configurations.all {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+        exclude group: 'ch.qos.logback', module: 'logback-classic'
+        exclude group: 'ch.qos.logback', module: 'logback-core'
+    }
 }
 
 /**
