Update log4j2 lib used by spring boot.

--- a/gradle.properties
+++ b/gradle.properties
@@ -30,6 +30,7 @@ jacksonDatabindVersion=2.10.1
 # available properties at:
 # https://github.com/spring-projects/spring-boot/blob/1.5.x/spring-boot-dependencies/pom.xml
 #
+log4j2.version=2.13.2
 jackson.version=2.10.1
 assetPluginVersion=3.1.0
 node.install=8.13.0
